--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -193,3 +193,5 @@ mark_huanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3124.png'
 mark_zhenshihuanxiang: 'https://seer2-resource.yuuinih.com/png/markImage/3125.png'
 mark_wanan: 'https://seer2-resource.yuuinih.com/png/markImage/3127.png'
 mark_huixin: 'https://seer2-resource.yuuinih.com/png/markImage/3110.png'
+mark_zhaocai: 'https://seer2-resource.yuuinih.com/png/markImage/3053.png'
+mark_jinbao: 'https://seer2-resource.yuuinih.com/png/markImage/3054.png'
