--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -621,3 +621,15 @@ skill_buyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
 skill_taobei: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_huawu: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
 skill_huanxiangzhiling: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_lingdang: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yaoling: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_zhenling: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shengcai: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_feiling: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_wabao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_bailingji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_lingyinsiqi: 'https://seer2-resource.yuuinih.com/sound/skill/10313.mp3'
+skill_changmingbuzhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_shengcailing: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_wabaolin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_lingdangshouhu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
