--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -8898,3 +8898,186 @@
     conditions:
       - type: selfUseSkill
       - *condition_self_has_huanxiang
+# 使自身随机获得招财或进宝
+- id: effect_skill_add_mark_zhaocai_or_jinbao
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: selector
+      value:
+        - type: entity:baseMark
+          value: mark_zhaocai
+        - type: entity:baseMark
+          value: mark_jinbao
+      chain:
+        - type: randomPick
+          arg: 1
+  condition:
+    type: selfUseSkill
+# 具有招财时威力2倍
+- id: effect_skill_power_2x_if_has_zhaocai
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_self_has_zhaocai
+        type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_zhaocai
+        evaluator:
+          type: exist
+# 具有进宝时暴击率增加95%
+- id: effect_skill_add_crit_rate_95_if_has_jinbao
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: addCritRate
+    target: usingSkillContext
+    value: 95
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_self_has_jinbao
+        type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: same
+                value: mark_jinbao
+        evaluator:
+          type: exist
+# 具有招财时必中
+- id: effect_skill_sure_hit_if_has_zhaocai
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setSureHit
+    target: usingSkillContext
+    priority: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_zhaocai
+# 具有进宝时，使对手获得15点命中下降
+- id: effect_skill_add_mark_opponent_mingzhongxiajiang_15_if_has_jinbao
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: opponent
+    mark:
+      type: entity:baseMark
+      value: mark_mingzhongxiajiang
+    stack: 15
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_jinbao
+# 具有招财时，连击3次
+- id: effect_skill_multihit_3_if_has_zhaocai
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: setMultihit
+    target: usingSkillContext
+    value: 3
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_zhaocai
+# 具有进宝时，附加100点伤害
+- id: effect_skill_add_fixed_damage_100_if_has_jinbao
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta: 100
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_jinbao
+# 具有招财时，伤害增加50%
+- id: effect_skill_damage_increase_50_if_has_zhaocai
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 50
+    delta: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_zhaocai
+# 具有进宝时，造成伤害减少50%
+- id: effect_skill_damage_reduce_50_if_has_jinbao
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: -50
+    delta: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_jinbao
+# 具有进宝时，造成伤害增加50%
+- id: effect_skill_damage_increase_50_if_has_jinbao
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 50
+    delta: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_jinbao
+# 具有招财时，造成伤害减少50%
+- id: effect_skill_damage_reduce_50_if_has_zhaocai
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: -50
+    delta: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_self_has_zhaocai
