--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -7475,3 +7475,152 @@
   tags: ['consume_huanxiang']
   effect:
     - effect_skill_consume_huanxiang_raise_spd_1_stage
+- id: skill_lingdang
+  element: Normal
+  category: Special
+  target: opponent
+  power: 55
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spd_1_stage_5_percent
+- id: skill_yaoling
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zhaocai_or_jinbao
+- id: skill_zhenling
+  element: Normal
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_has_zhaocai
+    - effect_skill_add_crit_rate_95_if_has_jinbao
+- id: skill_shengcai
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect: [] # TODO: 击败对手时获得1个赛尔豆
+- id: skill_feiling
+  element: Normal
+  category: Special
+  target: opponent
+  power: 105
+  rage: 20
+  accuracy: 85
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_hit_if_has_zhaocai
+    - effect_skill_add_mark_opponent_mingzhongxiajiang_15_if_has_jinbao
+- id: skill_wabao
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect: [] # TODO: 击败SPT时使装备掉率提高2%
+- id: skill_bailingji
+  element: Normal
+  category: Special
+  target: opponent
+  power: 45
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_multihit_3_if_has_zhaocai
+    - effect_skill_add_fixed_damage_100_if_has_jinbao
+- id: skill_lingyinsiqi
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zhaocai_or_jinbao
+- id: skill_changmingbuzhi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage
+    - effect_skill_raise_spa_1_stage
+- id: skill_shengcailing
+  element: Normal
+  category: Special
+  target: opponent
+  power: 100
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_damage_increase_50_if_has_zhaocai
+    - effect_skill_damage_reduce_50_if_has_jinbao
+- id: skill_wabaolin
+  element: Normal
+  category: Special
+  target: opponent
+  power: 100
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_damage_reduce_50_if_has_zhaocai
+    - effect_skill_damage_increase_50_if_has_jinbao
+- id: skill_lingdangshouhu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_def_1_stage
+    - effect_skill_raise_spd_1_stage
