--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -67,18 +67,8 @@
   condition:
     type: every
     conditions:
-      - type: evaluate
-        target:
-          base: selfMarks
-          chain:
-            - type: selectPath
-              arg: baseId
-            - type: where
-              arg:
-                type: same
-                value: mark_meihuo
-        evaluator:
-          type: exist
+      - type: selfHasMark
+        baseId: mark_meihuo
   apply:
     type: destroyMark
     target:
