fix: Add self-use condition to healing skill
Updated a healing skill to include a condition that it only activates when the skill is used by the user themselves.

--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -2139,6 +2139,10 @@
     type: heal
     target: self
     value: 120
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
 - id: effect_skill_reduce_opponent_def_1_stage_50_percent
   trigger: BeforeHit
   priority: 0
