--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -29,7 +29,7 @@
     "@arcadia-eternity/schema": "workspace:^",
     "nanoid": "^5.1.5",
     "rxjs": "^7.8.2",
-    "zod": "^3.25.67",
-    "zod-validation-error": "^3.5.2"
+    "zod": "^4.0.2",
+    "zod-validation-error": "4.0.0-beta.1"
   }
 }
