fix(skill): 流星盾,大气流
大气流之前在受击的时候无条件触发，现在仅在使用的时候触发。
流星盾现在会正确的销毁自身。

--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -2283,8 +2283,10 @@
           type: same
           value: Special
   apply:
-    type: preventDamage
-    target: damageContext
+    - type: preventDamage
+      target: damageContext
+    - type: destroyMark
+      target: mark
 
 # 沙鹤之力: 造成伤害增加35%
 - id: effect_mark_increase_damage_dealt_35_percent
