--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -4790,6 +4790,8 @@
     type: addRage
     target: self
     value: 25
+  condition:
+    type: selfUseSkill
 
 # 70%麻痹对手
 - id: effect_skill_add_mark_opponent_mabi_70_percent
