--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -234,4 +234,9 @@
   config: *emblem_config
   tags: [emblem]
   effect:
-    - effect_emblem_yaoling_extend_zhaocai_jinbao_duration # TODO: 使招财进宝的回合数+1
+    - effect_emblem_yaoling_extend_zhaocai_jinbao_duration
+- id: mark_emblem_yeshi
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_extend_bizhong_duration_5
