--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -633,3 +633,20 @@ skill_changmingbuzhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.m
 skill_shengcailing: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_wabaolin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
 skill_lingdangshouhu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_zhuoji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_yiji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_huiyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_yizhituji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_yizhiwudong: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_yeshizhiyan: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_yingzhizhua: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_yingzhiyuyi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yingzhuatuji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_baiyuqiege: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_xunjie: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_chihuan: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_jiaochayingzhuagong: 'https://seer2-resource.yuuinih.com/sound/skill/10462.mp3'
+skill_yingzhilijue: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_yingzhiruiyu: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_yingzhuasilie: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_baiyuzhuiji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
