--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -7624,3 +7624,209 @@
   effect:
     - effect_skill_raise_def_1_stage
     - effect_skill_raise_spd_1_stage
+- id: skill_zhuoji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 35
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_5_percent
+- id: skill_yiji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 60
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_opponent_spe_1_stage_5_percent
+- id: skill_huiyi
+  element: Flying
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage
+- id: skill_yizhituji
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_40_if_first
+- id: skill_yizhiwudong
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_40_if_last
+- id: skill_yeshizhiyan
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_bizhong
+- id: skill_yingzhizhua
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 30
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_multihit_4_if_first
+- id: skill_yingzhiyuyi
+  element: Flying
+  category: Special
+  target: opponent
+  power: 40
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_multihit_4_if_last
+- id: skill_yingzhuatuji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_damage_increase_30_percent_if_first
+- id: skill_baiyuqiege
+  element: Normal
+  category: Special
+  target: opponent
+  power: 100
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_damage_increase_30_percent_if_last
+- id: skill_xunjie
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xunjie_1
+- id: skill_chihuan
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_chihuan_1
+- id: skill_jiaochayingzhuagong
+  element: Flying
+  category: Climax
+  target: opponent
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stage_20_percent
+- id: skill_yingzhilijue
+  element: Flying
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_first
+- id: skill_yingzhiruiyu
+  element: Flying
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_last
+- id: skill_yingzhuasilie
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 70
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_fixed_damage_50_if_first
+- id: skill_baiyuzhuiji
+  element: Normal
+  category: Special
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_fixed_damage_50_if_last
