--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -195,3 +195,5 @@ mark_wanan: 'https://seer2-resource.yuuinih.com/png/markImage/3127.png'
 mark_huixin: 'https://seer2-resource.yuuinih.com/png/markImage/3110.png'
 mark_zhaocai: 'https://seer2-resource.yuuinih.com/png/markImage/3053.png'
 mark_jinbao: 'https://seer2-resource.yuuinih.com/png/markImage/3054.png'
+mark_xunjie: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
+mark_chihuan: 'https://seer2-resource.yuuinih.com/png/markImage/3074.png'
