--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "@arcadia-eternity/database": "workspace:^",
     "@arcadia-eternity/parser": "workspace:^",
     "@arcadia-eternity/protocol": "workspace:^",
+    "@arcadia-eternity/rules": "workspace:^",
     "@arcadia-eternity/schema": "workspace:^",
     "@aws-sdk/client-sesv2": "^3.844.0",
     "@grpc/grpc-js": "^1.13.4",
@@ -52,11 +53,11 @@
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^4.0.2"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.0.12",
+    "@types/node": "^24.0.13",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
