--- a/packages/web-ui/src-tauri/Cargo.toml
+++ b/packages/web-ui/src-tauri/Cargo.toml
@@ -32,3 +32,4 @@ tauri-plugin-updater = "2"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 thiserror = "2"
+reqwest = { version = "0.11", features = ["json"] }
